@@ -1627,13 +1627,9 @@ class rcube_imap
     // send expunge command in order to have the moved message
     // really deleted from the source mailbox
     if ($moved) {
-      // but only when flag_for_deletion is set to false
-      if (!rcmail::get_instance()->config->get('flag_for_deletion', false))
-        {
-        $this->_expunge($from_mbox, FALSE, $a_uids);
-        $this->_clear_messagecount($from_mbox);
-        $this->_clear_messagecount($to_mbox);
-        }
+      $this->_expunge($from_mbox, FALSE, $a_uids);
+      $this->_clear_messagecount($from_mbox);
+      $this->_clear_messagecount($to_mbox);
     }
     // moving failed
     else if (rcmail::get_instance()->config->get('delete_always', false)) {
